...
                }
            }
            .background(
                NavigationLink("", destination: DetailUIView(recipe: selected), isActive: $showDetailView)
            )
            .searchable(text: $searchText)
            .navigationTitle("Recetas")
        }
        
    }
    
    var searchResults: [KitchenRecipeEntity] {
            if searchText.isEmpty {
...
